--- a/sass/avail.scss
+++ b/sass/avail.scss
@@ -1,5 +1,8 @@
 section#availabilities {
   padding: 65px 0 35px;
+  .keys {
+    display:none;
+  }
   h1 {
     position:relative;
     letter-spacing:-.01em;
