--- a/sass/expanded.scss
+++ b/sass/expanded.scss
@@ -13,6 +13,7 @@ $imgDir: '../assets/imgs';
 @import 'footer.scss';
 @import 'btn-class.scss';
 @import 'modal.scss';
+@import 'map-key.scss';
 #css-checker {
   height: 1px;
 }
