--- a/sass/above/header.scss
+++ b/sass/above/header.scss
@@ -6,6 +6,16 @@
       padding:80rem 0 0 0;
     }
   }
+  .nav-spacer {
+    position:absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 0px;
+    @media($dt) {
+      height: 80rem;
+    }
+  }
 }
 header {
   h1 {
@@ -166,6 +176,15 @@ nav {
         letter-spacing: .05em;
         text-transform: capitalize;
         min-width:23px;
+        &.active {
+          color: $b-grey;
+          svg {
+            * {
+              fill: $b-grey;
+            }
+          }
+        }
+
       }
     }
     @media($dt) {
@@ -181,9 +200,19 @@ nav {
           padding:0;
           font-family:$din;
           text-transform:uppercase;
-          color:$b-orange;
+          color:$b-orange !important;
           font-size:24rem;
           letter-spacing:.01em;
+          .copy {
+            display:inline-block;
+            border-bottom: 3rem solid transparent;
+            line-height:normal;
+          }
+          &.active {
+            .copy {
+              border-color: $b-orange;
+            }
+          }
 
           html.__below-header & {
             height:80rem;
