--- a/sass/expanded.scss
+++ b/sass/expanded.scss
@@ -14,6 +14,7 @@ $imgDir: '../assets/imgs';
 @import 'btn-class.scss';
 @import 'modal.scss';
 @import 'map-key.scss';
+@import 'generalFader.scss';
 #css-checker {
   height: 1px;
 }
