--- a/sass/above/scaffold.scss
+++ b/sass/above/scaffold.scss
@@ -5,20 +5,36 @@
 }
 
 
+html {
+  font-size: 1px;
+  @media(min-width:375px) {
+    font-size: 1.17188px;
+  }
+  @media(min-width:1020px) {
+    font-size:.85333px;
+  }
+  @media(min-width:1600px) {
+    font-size:1.333px;
+  }
+
+
+}
+
+
 body {
   font-family: $serif;
-  font-size:18px;
+  font-size:18rem;
 
   line-height: $line-height-base;
   color: $main-color;
-  background-color: $body-bg;
+
   font-weight: normal;
   -webkit-font-smoothing: antialiased!important;
   -webkit-text-size-adjust: none;
   color: $b-orange;
-  background: lighten(#bababa,22%);
-  @media($dt) {
-    font-size:18rem;
+  background:white;
+  @media(min-width:1600px) {
+    background: lighten(#bababa,22%);
   }
 }
 
@@ -82,9 +98,12 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: $din;
   text-transform:uppercase;
-  font-size: 60px;
-  line-height:(48em/60);
+  font-size: 37rem;
+  line-height:(36em/40);
   font-weight:normal;
+  span.sm {
+    font-size: .70em;
+  }
   @media($dt) {
     font-size: 72rem;
     line-height:(60/72);
@@ -97,10 +116,10 @@ h1, h2, h3, h4, h5, h6,
       display:block;
       content:'';
       width: 100%;
-      height: 5px;
+      height: 4rem;
       background: $b-orange;
       left: 0;
-      bottom: -15px;
+      bottom: -15rem;
     }
     @media($dt) {
       border-bottom: (6rem) solid $b-orange;
@@ -141,27 +160,21 @@ ol, ul {
   margin-bottom: 1.5em;
   padding: 0;
   list-style:none;
+  //backface-visibility:hidden;
   > li {
     margin-bottom: 1em;
     position: relative;
-    padding-left: 16px;
-    @media($dt) {
-      padding-left:16rem;
-    }
+    padding-left: 16rem;
+  //  backface-visibility:hidden;
     &:before {
       position:absolute;
       display:block;
       content:'';
       left: 0;
-      top: 7px;
-      width:7px;
-      height: 7px;
+      top: 7rem;
+      width:7rem;
+      height: 7rem;
       background:white;
-      @media($dt) {
-        top:7rem;
-        width:7rem;
-        height:7rem;
-      }
     }
     &:last-child {
       margin: 0;
