--- a/sass/btn-class.scss
+++ b/sass/btn-class.scss
@@ -1,11 +1,11 @@
 .btn-class {
-  width:35px;
-  height: 41px;
+  width:30rem;
+  height: 30rem;
   background:$b-blue;
   svg {
     position:absolute;
-    width: 19px;
-    height: 19px;
+    width: 15rem;
+    height: 15rem;
     left: 50%;
     top: 50%;
     transform:translate(-50%,-50%);
