--- a/sass/above/main.scss
+++ b/sass/above/main.scss
@@ -9,6 +9,7 @@
 @import 'header.scss';
 @import 'hero.scss';
 @import 'building.scss';
+@import '../animateHead.scss';
 #css-checker {
   display: none;
   z-index:-9999;
