--- a/sass/expanded.scss
+++ b/sass/expanded.scss
@@ -15,6 +15,8 @@ $imgDir: '../assets/imgs';
 @import 'modal.scss';
 @import 'map-key.scss';
 @import 'generalFader.scss';
+@import 'build-galfx.scss';
+
 #css-checker {
   height: 1px;
 }
