--- a/sass/building.scss
+++ b/sass/building.scss
@@ -1,13 +1,31 @@
 section#building {
   .gallery {
-    background: $b-orange;
-    button {
+    background: black;
+    position: relative;
+    height: 246rem;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity $ts;
+    overflow:hidden;
+    &.__activated {
+      opacity: 1;
+      visibility:visible;
+    }
+    @media($dt) {
+      height: 675rem;
+      max-height: 675px;
+    }
+    .slick-track,.slick-list {
+      position:relative;
+      height: 100%;
+    }
+    .button {
       position: absolute;
       right: 0;
       top: 50%;
       transform: translateY(-50%);
-
-
+      cursor: pointer;
+      z-index:3;
       &.slick-prev {
         right: auto;
         left: 0;
@@ -16,14 +34,22 @@ section#building {
 
     }
     .slide {
-      position:relative;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-position: center center;
+      background-size: cover;
+
+
       img {
         width:100%;
       }
       .caption {
         position:absolute;
         left: 0;
-        bottom: 0;
+        top: 0;
         background:rgba(black,.8);
         color:white;
         font-size: 12rem;
