--- a/sass/generalFader.scss
+++ b/sass/generalFader.scss
@@ -4,8 +4,21 @@
       opacity: 0;
     }
     transition: opacity $ts*1.5;
+    &.animate-head h1 strong {
+      &:after {
+        transform-origin: left center;
+        transform: scaleX(0);
+        transition: transform $ts;
+        transition-delay: $ts;
+      }
+    }
     &.__activated {
       opacity: 1;
+      &.animate-head h1 strong {
+        &:after {
+          transform: scaleX(1);
+        }
+      }
     }
   }
 }
