--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -21,6 +21,25 @@
       opacity:1;
     }
   }
+  &.single, &.gal {
+    img {
+      transform:translate(-50%,-50%) scale(.1) ;
+      transition: transform $ts;
+      transform-origin: center center;
+    }
+    .main-content-area.__loaded {
+      img {
+        transform: translate(-50%,-50%) scale(1);
+      }
+    }
+  }
+
+  &.single.fp {
+    img {
+      max-height: 95%;
+      max-width: 95%;
+    }
+  }
   &.gal {
     .gallery-container {
       position:relative;
@@ -45,6 +64,25 @@
       }
     }
   }
+  &.pan-zoom {
+    img {
+      margin: 0;
+      max-width: none;
+      position:static;
+      max-height: none;
+      backface-visibility:hidden;
+    }
+    .map-interactor {
+      position:absolute;
+      left: 0;
+      top: 0;
+      width:100%;
+      height:100%;
+      opacity:.0;
+      cursor: move;
+      cursor: grab;
+    }
+  }
   a.modal-close {
     position:absolute;
     right: 0;
@@ -57,7 +95,7 @@
     position:absolute;
     left:50%;
     top:50%;
-    transform:translate(-50%,-50%);
+
   }
   .caption {
     position:absolute;
@@ -129,5 +167,28 @@
   40% {
     box-shadow: 0 -2em $b-grey;
     height: 5em;
+  }
+}
+a.modal-map {
+  display:block;
+  position: relative;
+
+  > .btn-class {
+    position: absolute;
+    left: 15rem;
+    bottom: 15rem;
+    width: 40rem;
+    height: 40rem;
+    opacity: 0;
+    transition: opacity $ts*.5;
+    > svg {
+      width: 20rem;
+      height: 20rem;
+    }
+  }
+  &:hover, html.touchevents & {
+    >.btn-class {
+      opacity: 1;
+    }
   }
 }
