stop scroll when modal opened

--- a/sass/above/header.scss
+++ b/sass/above/header.scss
@@ -276,7 +276,7 @@ nav {
               backface-visibility: hidden;
             }
           }
-          &.active {
+          &.active, &:hover {
             .copy {
               border-color: $b-orange;
               &:after {
