--- a/sass/contact.scss
+++ b/sass/contact.scss
@@ -103,6 +103,8 @@ section#contact {
       margin: 0 6rem 12rem 6rem ;
       @media($dt) {
         margin:0 25rem 40rem 0;
+        display:block;
+        margin: 0 0 25rem 0;
       }
       a {
         display:block;
