--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -101,8 +101,8 @@
     position:absolute;
     left: 0;
     bottom: 0;
-    background:rgba(black,.8);
-    color:white;
+    background:rgba(white,.8);
+    color:$b-blue;
     font-size: 12px;
     padding: 10px;
     width:100%;
