--- a/sass/dt-avail.scss
+++ b/sass/dt-avail.scss
@@ -162,12 +162,12 @@
       position: static;
       padding: 0;
       a {
-        font-size:24rem;
+        font-size:24rem !important;
         color: $b-blue !important;
         display:inline-block;
-        height:44rem;
+        height:44rem !important;
         line-height: 48rem !important;
-        padding: 0 8rem;
+        padding: 0 8rem !important;
         border: 1rem solid $b-orange;
         transition: color $ts;
         &:hover {
