--- a/sass/dt-avail.scss
+++ b/sass/dt-avail.scss
@@ -186,7 +186,11 @@
           clear:both;
           max-width: none;
           a {
-
+            border: 0;
+            color: $b-orange !important;
+            height: auto !important;
+            line-height: normal !important;
+            padding: 0 !important;
           }
         }
       }
